added_docker-resolving_and_starting-script_v5